@@ -1,3 +1,6 @@
+2013-06-16 Ivan Kartolo <ivan@kartolo.de>
+	* Bug #48515: Trim email addresses when fetching from database
+
 2013-06-10 Bernhard Kraft <kraft@webconsulting.at>
 	* Bug #46452: Statistics module: Use boolean compare instead of t3lib_div::inList
 
